...
                    }
                    .onDelete(perform: deletePerson)
                }
                .listStyle(.insetGrouped)
            }
        }
        .navigationTitle("Members")
        .navigationDestination(for: Person.self) { person in
            PersonDetailView(person: person)
        }
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button(
                    action: { showingAddPerson = true },
                    label: {
                        Image(systemName: "plus")
                    }
                )
                .accessibilityLabel("Add Member")
                .accessibilityIdentifier("toolbarAddMember")
            }
        }
        .sheet(isPresented: $showingAddPerson) {
            AddPersonView(viewModel: viewModel)
        }
        .overlay {
...
